42_ft_services_firstTry/srcs/ftps.yaml
apiVersion: v1
kind: Service
metadata:
  name: ftps
  labels:
    app: ftps
spec:
  type: NodePort
  ports:
  - port: 20
    nodePort: 20
    targetPort: 20
    protocol: TCP
    name: ftp
  - port: 21
    nodePort: 21
    targetPort: 21
    protocol: TCP
    name: ftps
  - port: 32099
    nodePort: 32099
    targetPort: 32099
    protocol: TCP
    name: ftps-pasv1
  - port: 32100
    nodePort: 32100
    targetPort: 32100
    protocol: TCP
    name: ftps-pasv2
  selector:
    app: ftps
  externalName: ft.services.ftps
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ftps
  labels:
    app: ftps
  namespace: default
spec:
  selector:
    matchLabels:
      app: ftps
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ftps
    spec:
      volumes:
      - name: ftps-persistent-storage
        persistentVolumeClaim:
          claimName: ftps-pv-claim
      containers:
      - name: ftps
        image: ftps_server
        imagePullPolicy: Never
        volumeMounts:
        - name: ftps-persistent-storage
          mountPath: /ftps/data
