42_ft_services_firstTry/srcs/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  backend:
    serviceName: nginx
    servicePort: 80 # 32080    
    # servicePort: 443 # 32443
  # tls:
  #     - secretName: ssl-keys


# apiVersion: networking.k8s.io/v1beta1
# kind: Ingress
# metadata:
#   name: ingress
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   rules:
#   - http:
#       paths:
#       - path: /
#         backend:
#           serviceName: nginx
#           servicePort: 80
#           servicePort: 443
